--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "description": "",
   "devDependencies": {
     "css-loader": "^0.28.10",
+    "html-webpack-plugin": "^3.0.6",
     "style-loader": "^0.20.2",
     "webpack": "^4.19.1",
     "webpack-cli": "^2.0.9"
