--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "keywords": [],
   "description": "",
   "devDependencies": {
+    "clean-webpack-plugin": "^0.1.18",
     "css-loader": "^0.28.10",
     "html-webpack-plugin": "^3.0.6",
     "style-loader": "^0.20.2",
+    "uglifyjs-webpack-plugin": "^1.2.2",
     "webpack": "^4.19.1",
     "webpack-cli": "^2.0.9"
   }
