--- a/.eslintrc
+++ b/.eslintrc
@@ -5,7 +5,6 @@
     },
     "extends": "eslint:recommended",
     "env": {
-      "es6": true,
       "browser": true,
       "jquery": true,
       "node": true,
@@ -15,6 +14,7 @@
         "semi": 1,
         "indent": ["warn", 2],
         "no-console": "warn",
+        "no-unused-vars": 0,
         "no-debugger": "warn"
     }
 }
